Alterando o component de login

--- a/FrontEnd/mindsafe/src/app/app.component.html
+++ b/FrontEnd/mindsafe/src/app/app.component.html
@@ -3,6 +3,6 @@
   <br>
   <a [routerLink]="['/visitas']">Visitas</a>
 </ul>
-<div>
+<div style="margin: 40px;">
   <router-outlet></router-outlet>
 </div>
