--- a/FrontEnd/mindsafe/src/app/login/login.component.html
+++ b/FrontEnd/mindsafe/src/app/login/login.component.html
@@ -1,16 +1,20 @@
 <div class="bg-login"></div>
+<header>
+  LOGIN
+</header>
 
 <mat-form-field>
   <input matInput placeholder="Login" type="text" [(ngModel)]="funcionario.login">
 </mat-form-field>
 
 <mat-form-field>
-  <input matInput placeholder="Senha" type="password" maxlength="8" [(ngModel)]="funcionario.senha" #senha>
+  <input matInput placeholder="Senha" [type]="senhaViziveu ? 'text' : 'password'" maxlength="8" [(ngModel)]="funcionario.senha" #senha>
+  <mat-icon matSuffix class="material-icons" (click)="vizualizarSenha()">{{ senhaViziveu ? 'visibility' : 'visibility_off' }}</mat-icon>
   <mat-hint align="end">
     {{ senha?.value.length }} / 8
   </mat-hint>
 </mat-form-field>
 
-<button mat-raised-button color="primary" [disabled]="funcionario.login == null || (funcionario.senha == null || funcionario.senha.length < 2) ">Logar <i class="material-icons">send</i></button>
-
-
+<button mat-raised-button color="primary"
+  [disabled]="funcionario.login == null || (funcionario.senha == null || funcionario.senha.length < 2) ">Logar <i
+    class="material-icons">send</i></button>
