--- a/FrontEnd/mindsafe/src/app/visitas/visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/visitas.component.html
@@ -1,24 +1,1 @@
-<div style="margin-left: 15px; margin-top: 15px;">
-
-    <mat-list id="visitalista" style="max-height: 150vh; overflow-y: auto;">
-
-        <h1 mat-subheader>Visitas</h1>
-
-        <div style="margin-left: 15px; margin-top: 15px;">
-
-            <button id="novaVisita" mat-fab class="bottomButtom" 
-            color="accent" (click)="novaVisita()">
-                <mat-icon>add</mat-icon>
-            </button>
-
-            <mat-list-item *ngFor="let visita of visitas">
-
-                <h4 mat-line>{{exemplo.nome}}</h4>
-                <button mat-icon-button (click)="remover(visita)">
-                    <mat-icon class="iconcolor" 
-                    aria-label="Remover">delete</mat-icon>
-                </button>
-            </mat-list-item>
-        </div>
-    </mat-list>
-</div>
+<mat-card>Simple card</mat-card>
