--- a/FrontEnd/mindsafe/src/app/login/login.component.html
+++ b/FrontEnd/mindsafe/src/app/login/login.component.html
@@ -8,13 +8,15 @@
 </mat-form-field>
 
 <mat-form-field>
-  <input matInput placeholder="Senha" [type]="senhaViziveu ? 'text' : 'password'" maxlength="8" [(ngModel)]="funcionario.senha" #senha>
+  <input matInput placeholder="Senha" [type]="senhaViziveu ? 'text' : 'password'" maxlength="10" [(ngModel)]="funcionario.senha" #senha>
   <mat-icon matSuffix class="material-icons" (click)="vizualizarSenha()">{{ senhaViziveu ? 'visibility' : 'visibility_off' }}</mat-icon>
   <mat-hint align="end">
-    {{ senha?.value.length }} / 8
+    {{ senha?.value.length }} / 10
   </mat-hint>
 </mat-form-field>
 
 <button mat-raised-button color="primary"
   [disabled]="funcionario.login == null || (funcionario.senha == null || funcionario.senha.length < 2) ">Logar <i
     class="material-icons">send</i></button>
+
+<a>Esqueci minha senha</a>
