--- a/FrontEnd/mindsafe/src/app/login/login.component.scss
+++ b/FrontEnd/mindsafe/src/app/login/login.component.scss
@@ -20,3 +20,13 @@ header {
   font-size: 40pt;
   color: #565656;
 }
+
+a {
+  text-decoration: none;
+  color: rgb(133, 133, 133);
+  font-weight: 500;
+  font-size: 12pt;
+  margin-top: 30px;
+  display: block;
+  float: right;
+}
