Alterando menu-sidenav e login component

--- a/FrontEnd/mindsafe/src/app/login/login.component.scss
+++ b/FrontEnd/mindsafe/src/app/login/login.component.scss
@@ -1,8 +1,32 @@
-.bg-login {
-  background: grey;
-  height: 300px;
-  width: 100%;
+/* Classes */
+
+.titulo {
+  display: block;
+  text-align: center;
+  font-size: 32pt;
+  margin-top: 10px;
+  font-weight: 400;
+  color: white;
+
 }
+
+.logo {
+  margin: auto;
+  background-image: url('../../assets/logo-tcc.png');
+  background-size: cover;
+  width: 250px;
+  height: 200px;
+}
+
+.bg-login {
+  background-image: url('../../assets/cats.jpg');
+  background-size: cover;
+  height: 400px;
+  width: 100%;
+
+}
+
+/* Tags */
 
 mat-form-field {
   width: 100%;
@@ -25,7 +49,7 @@ a {
   text-decoration: none;
   color: rgb(133, 133, 133);
   font-weight: 500;
-  font-size: 12pt;
+  font-size: 11pt;
   margin-top: 30px;
   display: block;
   float: right;
