--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav.component.scss
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav.component.scss
@@ -1,10 +1,16 @@
 /* Classes */
 
-.imagem-fundo {
-  width: 100%;
-  height: 130px;
-  background-color: #dcdcdc;
-  border-radius: 0px 0px 5px 5px;
+.logo-page {
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.logo {
+  background-image: url('../../assets/logo-tcc.png');
+  background-size: cover;
+  width: 35px;
+  height: 35px;
 }
 
 .sidenav {
@@ -42,5 +48,5 @@ mat-nav-list a {
 }
 
 mat-sidenav {
-  width: 60%;
+  width: 50%;
 }
