--- a/FrontEnd/mindsafe/src/app/login/login/login.component.scss
+++ b/FrontEnd/mindsafe/src/app/login/login/login.component.scss
@@ -12,14 +12,14 @@
 
 .logo {
   margin: auto;
-  background-image: url('../../assets/logo-tcc.png');
+  background-image: url('../../../assets/logo-tcc.png');
   background-size: cover;
   width: 250px;
   height: 200px;
 }
 
 .bg-login {
-  background-image: url('../../assets/cats.jpg');
+  background-image: url('../../../assets/cats.jpg');
   background-size: cover;
   height: 400px;
   width: 100%;
@@ -37,7 +37,7 @@ button {
   width: 100%;
 }
 
-header {
+h1 {
   margin-top: 40px;
   margin-bottom: 80px;
   text-align: center;
