este comit é só pra mim fazer em casa
não usem ainda esse cmit, porque estou usando ele só para conseguir fazer em casa no meu not, estou tentando implementar as vistas, e a net está caindo bastante aqui na cidade; depois dou um uncomit

--- a/FrontEnd/mindsafe/src/app/visitas/visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/visitas.component.html
@@ -9,3 +9,34 @@
         </mat-card-actions>
     </mat-card>
 </div>
+
+
+
+
+<h2>Pacientes Visitados</h2>
+
+<div style="padding-left: 15px; padding-right: 15px;">
+
+    <mat-card>
+        <mat-list>
+            <mat-list-item *ngFor="let visita of visitas">
+                <strong>{{ visita.pessoa.nome }}</strong>
+                {{ visita.dataVisita | date }} 
+                <mat-icon class="material-icons" *ngIf="visita.codigo != null">done</mat-icon> 
+                <button mat-icon-button color="primary">
+                    <i class="material-icons">search</i>
+                </button>
+            </mat-list-item>
+        </mat-list>
+
+    </mat-card>
+    
+</div>
+
+
+
+
+
+  
+
+  
