Alteração no front-end login, pacientes e visitas

--- a/FrontEnd/mindsafe/src/app/login/login/login.component.scss
+++ b/FrontEnd/mindsafe/src/app/login/login/login.component.scss
@@ -21,9 +21,9 @@
 .bg-login {
   background-image: url('../../../assets/cats.jpg');
   background-size: cover;
+  background-position: center;
   height: 400px;
   width: 100%;
-
 }
 
 /* Tags */
