--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.scss
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.scss
@@ -1,18 +1,26 @@
 .bg-pacientes {
-  padding-top: 100px;
-  height: 200px;
+  padding-top: 1px;
+  height: 300px;
   width: 100%;
   background-color: #cecece;
+  margin-bottom: 10px;
 }
 
 .titulo {
+  position: relative;
+  margin-top: 150px;
   font-size: 30pt;
   margin-left: 30px;
   font-weight: bold;
   color: white;
 }
 
+.espaco-lateral {
+  padding: 0 30px;
+}
 
 mat-form-field {
   width: 100%;
 }
+
+
