Alteração em pacientes component

--- a/FrontEnd/mindsafe/src/app/visitas/visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/visitas.component.html
@@ -1,37 +1,30 @@
 <div style="padding-left: 20px; padding-right: 20px;">
-    <mat-card>
-        <mat-card-content>
-            <mat-icon class="material-icons">record_voice_over</mat-icon> 
-            <h2>{{ msg }}</h2>
-        </mat-card-content>
-        <mat-card-actions>
-            <button class="full-size" color="primary" mat-raised-button>Continuar Visistas <i class="material-icons">send</i></button>
-        </mat-card-actions>
-    </mat-card>
+  <mat-card>
+    <mat-card-content>
+      <mat-icon class="material-icons">record_voice_over</mat-icon>
+      <h2>{{ msg }}</h2>
+    </mat-card-content>
+    <mat-card-actions>
+      <button class="full-size" color="primary" mat-raised-button>Continuar Visistas <i
+          class="material-icons">send</i></button>
+    </mat-card-actions>
+  </mat-card>
 </div>
 
 <h2>Pacientes Visitados</h2>
 
 <div>
 
-    <mat-card>
-        <mat-list>
-            <mat-list-item *ngFor="let visita of visitas">
-                {{ visita.pessoa.nome }} - {{ visita.dataVisita | date }} 
-                <mat-icon class="material-icons" *ngIf="visita.codigo != null">done</mat-icon> 
-                <button mat-fab color="primary">
-                    <i class="material-icons">search</i>
-                </button>
-            </mat-list-item>
-        </mat-list>
-    </mat-card>
-    
+  <mat-card>
+    <mat-list>
+      <mat-list-item *ngFor="let visita of visitas">
+        {{ visita.pessoa.nome }} - {{ visita.dataVisita | date }}
+        <mat-icon class="material-icons" *ngIf="visita.codigo != null">done</mat-icon>
+        <button mat-fab color="primary">
+          <i class="material-icons">search</i>
+        </button>
+      </mat-list-item>
+    </mat-list>
+  </mat-card>
+
 </div>
-
-
-
-
-
-  
-
-  
