--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
@@ -8,16 +8,16 @@
   <div fxFlex="70%" fxFlex.md="60%" fxFlex.sm="50%">
 
     <mat-form-field>
-      <input matInput placeholder="Filtro" type="text">
+      <input matInput placeholder="Filtro" type="text" #filtroTexto>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Filtro Selecionado</mat-label>
-      <mat-select>
-        <mat-option>
+      <mat-select #filtroTipo>
+        <mat-option value="valor 1">
           Valor 1
         </mat-option>
-        <mat-option>
+        <mat-option value="valor 2">
           Valor 2
         </mat-option>
       </mat-select>
@@ -27,19 +27,19 @@
 
   <div fxFlex="20%" fxFlex.md="25%" fxFlex.sm="35%">
     <mat-card>
-      <button mat-icon-button [disabled]="'true'">
+      <button mat-icon-button [disabled]="(filtroTexto.value == '' || filtroTipo.value == null)">
         <mat-icon class="material-icons">search</mat-icon>
       </button>
-      <button mat-icon-button [disabled]="'true'">
+      <button mat-icon-button [disabled]="selection.selected.length == 0">
         <mat-icon class="material-icons">edit</mat-icon>
       </button>
-      <button mat-icon-button [disabled]="'true'">
+      <button mat-icon-button [disabled]="selection.selected.length == 0">
         <mat-icon class="material-icons">delete</mat-icon>
       </button>
-      <button mat-icon-button [disabled]="'true'">
+      <button mat-icon-button [disabled]="selection.selected.length != 1">
         <mat-icon class="material-icons">perm_media</mat-icon>
       </button>
-      <button mat-icon-button [disabled]="'false'">
+      <button mat-icon-button [disabled]="selection.selected.length > 0">
         <mat-icon class="material-icons">add</mat-icon>
       </button>
     </mat-card>
@@ -47,10 +47,49 @@
 
 </div>
 
-<div style="margin-top: 10px;">
-  <mat-card>
-    <mat-list>
-      <mat-list-item *ngFor="let paciente of pacientes">{{ paciente.codigo }} - {{ paciente.nome }} - {{ paciente.familia }} - {{ paciente.cpfCnpj }}</mat-list-item>
-    </mat-list>
-  </mat-card>
+<div class="mat-elevation-z8" class="espaco-lateral">
+  <table mat-table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="codigo">
+      <th mat-header-cell *matHeaderCellDef> Código </th>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.codigo}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef> Nome </th>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.nome}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="familia">
+      <th mat-header-cell *matHeaderCellDef> Família </th>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.familia}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="cpfCnpj">
+      <th mat-header-cell *matHeaderCellDef> CPF/CNPJ </th>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.cpfCnpj}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox (change)="$event ? masterToggle() : null"
+                      [checked]="selection.hasValue() && isAllSelected()"
+                      [indeterminate]="selection.hasValue() && !isAllSelected()"
+                      [aria-label]="checkboxLabel()">
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let paciente">
+        <mat-checkbox (click)="$event.stopPropagation()"
+                      (change)="$event ? selection.toggle(paciente) : null"
+                      [checked]="selection.isSelected(paciente)"
+                      [aria-label]="checkboxLabel(paciente)">
+        </mat-checkbox>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
