--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
@@ -5,7 +5,7 @@
 
 <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center center" ngClass.xs="espaco-lateral">
 
-  <div fxFlex="70%" fxFlex.md="60%" fxFlex.sm="50%">
+  <div fxFlex="70%" fxFlex.md="60%" fxFlex.sm="50%" fxFlex.xs="40%">
 
     <mat-form-field>
       <input matInput placeholder="Filtro" type="text" #filtroTexto>
@@ -33,7 +33,7 @@
       <button mat-icon-button [disabled]="selection.selected.length == 0">
         <mat-icon class="material-icons">edit</mat-icon>
       </button>
-      <button mat-icon-button [disabled]="selection.selected.length == 0">
+      <button mat-icon-button (click)="onDelete()" [disabled]="selection.selected.length == 0">
         <mat-icon class="material-icons">delete</mat-icon>
       </button>
       <button mat-icon-button [disabled]="selection.selected.length != 1">
@@ -92,4 +92,8 @@
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
+
+<div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14318.89292713213!2d-52.68824816901856!3d-26.20568011276787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1581982592962!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 </div>
