alteração em pacientes component, integração com o backend, trazendo registros

--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
@@ -5,7 +5,7 @@
 
 <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center center" ngClass.xs="espaco-lateral">
 
-  <div fxFlex="80%" fxFlex.md="70%" fxFlex.sm="60%" fxFlex.xs="50%">
+  <div fxFlex="75%" fxFlex.md="65%" fxFlex.sm="60%" fxFlex.xs="50%">
 
     <mat-form-field>
       <input matInput placeholder="Filtro" type="text" #filtroTexto>
@@ -14,11 +14,8 @@
     <mat-form-field>
       <mat-label>Filtro Selecionado</mat-label>
       <mat-select #filtroTipo>
-        <mat-option value="valor 1">
-          Valor 1
-        </mat-option>
-        <mat-option value="valor 2">
-          Valor 2
+        <mat-option *ngFor="let op of filtroPesquisa" value="{{ op.valor }}" (selectionChange)="applyFilterType(op.valor)">
+          {{ op.nome }}
         </mat-option>
       </mat-select>
     </mat-form-field>
@@ -27,7 +24,7 @@
 
   <div fxFlex="20%" fxFlex.md="25%" fxFlex.sm="35%">
     <mat-card>
-      <button mat-icon-button [disabled]="(filtroTexto.value == '' || filtroTipo.value == null)">
+      <button mat-icon-button (click)="applyFilter(filtroTexto.value, filtroTipo.value)" [disabled]="(filtroTexto.value == '' || filtroTipo.value == null)">
         <mat-icon class="material-icons">search</mat-icon>
       </button>
       <button mat-icon-button [disabled]="selection.selected.length == 0">
@@ -50,9 +47,9 @@
 <div class="mat-elevation-z8" class="espaco-lateral">
   <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="codigo">
+    <ng-container matColumnDef="idPessoa">
       <th mat-header-cell *matHeaderCellDef> Código </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.codigo}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.idPessoa}} </td>
     </ng-container>
 
     <ng-container matColumnDef="nome">
@@ -62,12 +59,27 @@
 
     <ng-container matColumnDef="familia">
       <th mat-header-cell *matHeaderCellDef> Família </th>
-      <td mat-cell *matCellDef="let paciente"> {{paciente.familia}} </td>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.familia.nome}} </td>
     </ng-container>
 
     <ng-container matColumnDef="cpfCnpj">
       <th mat-header-cell *matHeaderCellDef> CPF/CNPJ </th>
       <td mat-cell *matCellDef="let paciente"> {{paciente.cpfCnpj}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="responsavelFamiliar">
+      <th mat-header-cell *matHeaderCellDef> Responsável Familiar </th>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.responsavelFamiliar ? 'Sim' : 'Não'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dataNascimento">
+      <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.dataNascimento}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nacionalidade">
+      <th mat-header-cell *matHeaderCellDef> Nacionalidade </th>
+      <td mat-cell *matCellDef="let paciente"> {{paciente.nacionalidade}} </td>
     </ng-container>
 
     <ng-container matColumnDef="select">
