--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav.component.scss
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav.component.scss
@@ -47,6 +47,18 @@ mat-nav-list a {
   color: white;
 }
 
-mat-sidenav {
-  width: 50%;
+.sidenav-xs {
+  width: 90%;
+}
+
+.sidenav-sm {
+  width: 70%;
+}
+
+.sidenav-md {
+  width: 45%;
+}
+
+.sidenav-lg {
+  width: 30%;
 }
