--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav.component.html
@@ -2,21 +2,17 @@
   <button mat-icon-button (click)="snav.toggle()">
     <mat-icon class="material-icons">menu</mat-icon>
   </button>
-  <div class="logo-page">
-    <div class="logo"></div>
-    <h1 style="margin-left: 10px;">MindSafe</h1>
-  </div>
+  <a [routerLink]="['dashboard']" class="logo-page">
+    <div class="logo-page">
+      <div class="logo"></div>
+      <h1 style="margin-left: 10px;">MindSafe</h1>
+    </div>
+  </a>
 </mat-toolbar>
 <mat-sidenav-container>
 
-  <mat-sidenav
-    ngClass.xs="sidenav-xs"
-    ngClass.sm="sidenav-sm"
-    ngClass.md="sidenav-md"
-    ngClass.lg="sidenav-lg"
-    class="sidenav"
-    mode="over"
-    #snav>
+  <mat-sidenav ngClass.xs="sidenav-xs" ngClass.sm="sidenav-sm" ngClass.md="sidenav-md" ngClass.lg="sidenav-lg"
+    class="sidenav" mode="over" #snav>
     <div class="informacoes-funcionario">
       <mat-card>
         <mat-card-header>
@@ -38,15 +34,13 @@
       <p id="menu-title">MENU</p>
       <div class="divisor-white"></div>
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['/login']">LOGIN</a>
-        <mat-divider></mat-divider>
         <a mat-list-item>RESIDÊNCIAS</a>
         <a mat-list-item>FAMÍLIAS</a>
-        <a mat-list-item [routerLink]="['/pacientes']">PACIENTES</a>
+        <a mat-list-item [routerLink]="['pacientes']">PACIENTES</a>
         <a mat-list-item>CONTROLE</a>
-        <a mat-list-item [routerLink]="['/visitas']">VISITAS</a>
+        <a mat-list-item [routerLink]="['visitas']">VISITAS</a>
         <div class="divisor-white"></div>
-        <a mat-list-item>SAIR <i class="material-icons">exit_to_app</i></a>
+        <a mat-list-item (click)="sair()">SAIR <i class="material-icons">exit_to_app</i></a>
       </mat-nav-list>
     </div>
   </mat-sidenav>
@@ -56,4 +50,3 @@
   </mat-sidenav-content>
 
 </mat-sidenav-container>
-
