Criando modal de vizualização das informações do paciente

--- a/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
+++ b/FrontEnd/mindsafe/src/app/pacientes/pacientes/pacientes.component.html
@@ -37,7 +37,7 @@
       <button mat-icon-button (click)="onDelete()" [disabled]="selection.selected.length == 0">
         <mat-icon class="material-icons">delete</mat-icon>
       </button>
-      <button mat-icon-button [disabled]="selection.selected.length != 1">
+      <button mat-icon-button (click)="onInfoPaciente()" [disabled]="selection.selected.length != 1">
         <mat-icon class="material-icons">perm_media</mat-icon>
       </button>
       <button mat-icon-button [disabled]="selection.selected.length > 0">
