--- a/FrontEnd/mindsafe/src/app/shared/paciente-info-modal/paciente-info-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/shared/paciente-info-modal/paciente-info-modal.component.html
@@ -37,8 +37,8 @@
     <h2 class="titulo-descricao">Medicamentos</h2>
     <div class="box-padrao">
       <mat-list>
-        <mat-list-item mat-line *ngFor="let medicamento of medicamentos">
-          {{ medicamento.nome }} - {{ medicamento.horarios.join(', ') }}
+        <mat-list-item mat-line *ngFor="let element of medicamentos$ | async">
+          {{ element.medicamento.nome }} - {{ element.horarios }}
         </mat-list-item>
       </mat-list>
     </div>
