--- a/FrontEnd/mindsafe/src/app/shared/paciente-info-modal/paciente-info-modal.component.scss
+++ b/FrontEnd/mindsafe/src/app/shared/paciente-info-modal/paciente-info-modal.component.scss
@@ -126,7 +126,7 @@ button {
   width: 100%;
 }
 
-.adendamentos {
+.agendamentos {
   width: 100%
 }
 
@@ -142,4 +142,8 @@ button {
 
 .bg-situacao-paciente:hover .risco-texto-overlay {
   opacity: 1;
+}
+
+.mat-list-item-xs {
+  margin: 20px 0 30px 0;
 }
